fix: order update on inventory page + show available products on orders page